--- a/package.json
+++ b/package.json
@@ -5,20 +5,15 @@
   "author": "Jack Cross <jackjocross@gmail.com>",
   "dependencies": {
     "dotenv": "^6.0.0",
-    "gatsby": "next",
-    "gatsby-link": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-source-contentful": "next",
-    "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "next",
+    "gatsby": "^1.9.270",
+    "gatsby-link": "^1.6.44",
+    "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-source-contentful": "^1.3.52",
+    "gatsby-source-filesystem": "^1.5.38",
     "glamor": "^2.20.40",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
     "react-helmet": "^5.2.0"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
