--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "version": "0.1.0",
   "author": "Jack Cross <jackjocross@gmail.com>",
   "dependencies": {
-    "dotenv": "^6.0.0",
-    "gatsby": "^1.9.270",
-    "gatsby-link": "^1.6.44",
+    "date-fns": "^2.0.0-alpha.10",
+    "gatsby": "^2.0.0-beta.1",
+    "gatsby-link": "^2.0.0-beta.1",
     "gatsby-plugin-react-helmet": "^2.0.11",
-    "gatsby-source-contentful": "^1.3.52",
-    "gatsby-source-filesystem": "^1.5.38",
+    "gatsby-source-contentful": "^2.0.1-beta.1",
+    "gatsby-source-filesystem": "^2.0.1-beta.1",
     "glamor": "^2.20.40",
-    "react-helmet": "^5.2.0"
+    "normalize.css": "^8.0.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
+    "react-icons": "^2.2.7"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -22,6 +28,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "dotenv": "^6.0.0",
     "prettier": "^1.12.0"
   }
 }
