--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "date-fns": "^2.0.0-alpha.10",
     "gatsby": "^2.0.0-beta.1",
     "gatsby-link": "^2.0.0-beta.1",
+    "gatsby-plugin-glamor": "^2.0.0-beta.2",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-source-contentful": "^2.0.1-beta.1",
     "gatsby-source-filesystem": "^2.0.1-beta.1",
