More responsive, better image loading, post pages

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "author": "Jack Cross <jackjocross@gmail.com>",
   "dependencies": {
     "date-fns": "^2.0.0-alpha.10",
-    "gatsby": "^2.0.0-beta.1",
+    "gatsby": "^2.0.0-beta.20",
+    "gatsby-image": "^1.0.54",
     "gatsby-link": "^2.0.0-beta.1",
     "gatsby-plugin-glamor": "^2.0.0-beta.2",
     "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby-plugin-sharp": "^1.6.48",
     "gatsby-source-contentful": "^2.0.1-beta.1",
     "gatsby-source-filesystem": "^2.0.1-beta.1",
+    "gatsby-transformer-sharp": "^1.6.27",
     "glamor": "^2.20.40",
     "normalize.css": "^8.0.0",
     "react": "^16.4.1",
