Remove flipster flicker and setup sound framework

--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
+    "react-sound": "^1.2.0",
     "zepto": "^1.2.0"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
