--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "description": "Low Stakes website",
   "version": "0.1.0",
   "author": "Jack Cross <jackjocross@gmail.com>",
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write 'src/**/*.js'",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src"
+  },
   "dependencies": {
     "date-fns": "^2.0.0-alpha.10",
     "gatsby": "^2.0.0-beta.20",
@@ -16,10 +27,9 @@
     "gatsby-source-filesystem": "^2.0.1-beta.1",
     "gatsby-transformer-sharp": "^1.6.27",
     "glamor": "^2.20.40",
-    "imports-loader": "^0.8.0",
     "jquery": "^3.3.1",
-    "less": "^3.7.1",
     "normalize.css": "^8.0.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
@@ -28,18 +38,41 @@
     "react-sound": "^1.2.0",
     "zepto": "^1.2.0"
   },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
     "dotenv": "^6.0.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
+    "imports-loader": "^0.8.0",
+    "less": "^3.7.1",
     "prettier": "^1.12.0"
+  },
+  "lint-staged": {
+    "linters": {
+      "**/*.{js,json,md}": [
+        "npm format",
+        "git add"
+      ]
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "extends": [
+      "airbnb",
+      "prettier"
+    ],
+    "rules": {
+      "import/prefer-default-export": "off"
+    }
   }
 }
