--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   },
   "dependencies": {
     "date-fns": "^2.0.0-alpha.10",
-    "gatsby": "^2.0.0-beta.20",
-    "gatsby-image": "^1.0.54",
-    "gatsby-link": "^2.0.0-rc.0",
-    "gatsby-plugin-glamor": "^2.0.0-beta.2",
-    "gatsby-plugin-less": "^2.0.0-beta.4",
-    "gatsby-plugin-react-helmet": "^2.0.11",
-    "gatsby-plugin-sharp": "^1.6.48",
-    "gatsby-source-contentful": "^2.0.1-beta.1",
-    "gatsby-source-filesystem": "^2.0.1-beta.1",
+    "gatsby": "^2.0.8",
+    "gatsby-image": "^2.0.9",
+    "gatsby-link": "^2.0.1",
+    "gatsby-plugin-glamor": "^2.0.5",
+    "gatsby-plugin-less": "^2.0.5",
+    "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.0.5",
+    "gatsby-source-contentful": "^2.0.1-rc.4",
+    "gatsby-source-filesystem": "^2.0.1-rc.1",
+    "gatsby-transformer-remark": "^2.1.3",
     "gatsby-transformer-sharp": "^1.6.27",
     "glamor": "^2.20.40",
     "jquery": "^3.3.1",
@@ -35,11 +36,12 @@
     "react-flip-toolkit": "^4.0.5",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
-    "react-pose": "^3.0.2",
     "react-sound": "^1.2.0",
+    "react-spring": "^5.6.14",
     "zepto": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "dotenv": "^6.0.0",
     "eslint": "^5.3.0",
@@ -74,9 +76,6 @@
     ],
     "rules": {
       "import/prefer-default-export": "off"
-    },
-    "files": [
-      "src/**/*.{js,jxs}"
-    ]
+    }
   }
 }
